--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     implementation 'com.moxun:tagcloudlib:1.2.0'
     implementation 'com.jaeger.statusbarutil:library:1.5.1'
     implementation 'com.makeramen:roundedimageview:2.3.0'
+    implementation 'com.xiaosong520:doublewaveview:1.0.2'
+    implementation "com.squareup.okhttp3:okhttp:3.12.0"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
