--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.lzy.net:okgo:3.0.4'
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'me.jessyan:autosize:1.0.6'
     //noinspection GradleCompatible
@@ -34,7 +35,6 @@ dependencies {
     implementation 'com.jaeger.statusbarutil:library:1.5.1'
     implementation 'com.makeramen:roundedimageview:2.3.0'
     implementation 'com.xiaosong520:doublewaveview:1.0.2'
-    implementation "com.squareup.okhttp3:okhttp:3.12.0"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
