--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+
 android {
     compileSdkVersion 28
     defaultConfig {
@@ -27,14 +28,18 @@ dependencies {
     implementation 'com.lzy.net:okgo:3.0.4'
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'me.jessyan:autosize:1.0.6'
+    implementation 'com.roughike:bottom-bar:2.3.1'
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation "org.jetbrains.anko:anko:$anko_version"
     implementation 'com.moxun:tagcloudlib:1.2.0'
     implementation 'com.jaeger.statusbarutil:library:1.5.1'
     implementation 'com.makeramen:roundedimageview:2.3.0'
     implementation 'com.xiaosong520:doublewaveview:1.0.2'
+    implementation 'com.github.tbruyelle:rxpermissions:0.10.2'
+    implementation 'com.google.code.gson:gson:2.8.5'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
