--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             android:appComponentFactory="whateverString"
     >
         <activity
-                android:name=".ui.activity.SplashActivity"
+                android:name=".ui.activity.MainActivity"
                 android:exported="true"
         >
             <intent-filter>
@@ -29,12 +29,13 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.activity.RegisterActivity"></activity>
-        <activity android:name=".ui.activity.MainActivity"></activity>
+        <activity android:name=".ui.activity.SplashActivity"></activity>
         <activity android:name=".ui.activity.LoginActivity"></activity>
         <activity android:name=".ui.activity.SettingActivity"></activity>
         <activity android:name=".ui.activity.CollectActivity"></activity>
         <activity android:name=".ui.activity.goverment.GoverAcitivity"></activity>
         <activity android:name=".ui.activity.goverment.GoverDetailAcitivity"></activity>
+        <activity android:name=".ui.activity.Homework.WorkDetailActivity"></activity>
 
         <meta-data
                 android:name="design_width_in_dp"
