--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.SEND_SMS"></uses-permission>
 
     <application
@@ -20,7 +21,7 @@
             android:appComponentFactory="whateverString"
     >
         <activity
-                android:name=".ui.activity.MainActivity"
+                android:name=".ui.activity.SplashActivity"
                 android:exported="true"
         >
             <intent-filter>
@@ -36,18 +37,24 @@
         <activity android:name=".ui.activity.Goverment.GoverAcitivity"></activity>
         <activity android:name=".ui.activity.Goverment.GoverDetailAcitivity"></activity>
         <activity android:name=".ui.activity.HomeWork.WorkDetailActivity"></activity>
-        <activity android:name=".ui.activity.SplashActivity"></activity>
+        <activity android:name=".ui.activity.MainActivity"></activity>
         <activity android:name=".ui.activity.AddChild.IsregisterActivity"></activity>
         <activity android:name=".ui.activity.ClevelActivity"></activity>
         <activity android:name=".ui.activity.InfoActivity"></activity>
         <activity android:name=".ui.activity.PinfoActivity"></activity>
         <activity android:name=".ui.activity.AddChild.NoregisterActivity"></activity>
+        <activity android:name=".ui.activity.UploadDetailActivity"></activity>
+        <activity android:name=".ui.activity.VipManage.VipActivity"></activity>
+        <activity android:name=".ui.activity.VipManage.VipDetailActivity"></activity>
+        <activity android:name=".ui.activity.PaySuccessActivity"/>
+        <activity android:name=".ui.activity.VipManage.VipListActivity"/>
+        <activity android:name=".ui.activity.OrderManage.OrderListActivity"/>
         <meta-data
                 android:name="design_width_in_dp"
-                android:value="1080"/>
+                android:value="360"/>
         <meta-data
                 android:name="design_height_in_dp"
-                android:value="1920"/>
+                android:value="640"/>
     </application>
 
 </manifest>
