--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,9 @@ allprojects {
         google()
         jcenter()
         mavenCentral()
-        maven { url 'https://jitpack.io' }
+        maven {url "https://maven.google.com" }
+        maven {url 'https://jitpack.io'}
+
     }
 }
 
